force-app/main/default/objects/SaiCS1__c/SaiCS1__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>sdfdgfd</description>
    <label>SaiCS1</label>
</CustomObject>