force-app/main/default/objects/SaiCS1__c/fields/F1__c.field-meta.xml
<CustomField>
    <fullName>F1__c</fullName>
    <externalId>true</externalId>
    <label>F1</label>
    <length>6</length>
    <type>Text</type>
</CustomField>