force-app/main/default/objects/SaiCS1__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <label>F2</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>