force-app/main/default/objects/SaiCS1__c/fields/URlTestF2__c.field-meta.xml
<CustomField>
    <fullName>URlTestF2__c</fullName>
    <label>URlTestF2</label>
    <type>Url</type>
</CustomField>