force-app/main/default/objects/SaiCS1__c/fields/URlTestField__c.field-meta.xml
<CustomField>
    <fullName>URlTestField__c</fullName>
    <businessOwnerUser>saikumar-sb.three@autorabit.com</businessOwnerUser>
    <label>URlTestField</label>
    <type>Url</type>
</CustomField>